syntax = "proto3";

package j5.list.v1;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/pentops/j5/gen/j5/list/v1/list_j5pb";

extend google.protobuf.MessageOptions {
  optional MessageConstraint message = 85510000;
  optional ListRequestMessage list_request = 85510001;
}

message MessageConstraint {}

message ListRequestMessage {
  repeated string default_sort = 1;
  repeated string sort_tiebreaker = 2;
}

extend google.protobuf.FieldOptions {
  optional FieldConstraint field = 85510001;
}

extend google.protobuf.OneofOptions {
  optional OneofRules oneof = 85510002;
}

message OneofRules {
  FilteringConstraint filtering = 10;
}

message FieldConstraint {
  oneof type {
    FloatRules double = 1;
    IntegerRules fixed32 = 2;
    IntegerRules fixed64 = 3;
    FloatRules float = 4;
    IntegerRules int32 = 5;
    IntegerRules int64 = 6;
    IntegerRules sfixed32 = 7;
    IntegerRules sfixed64 = 8;
    IntegerRules sint32 = 9;
    IntegerRules sint64 = 10;
    IntegerRules uint32 = 11;
    IntegerRules uint64 = 12;
    BoolRules bool = 13;
    StringRules string = 14;

    EnumRules enum = 20;

    TimestampRules timestamp = 30;
    DateRules date = 31;
    DecimalRules decimal = 32;
    AnyRules any = 50;
  }
}

message FilteringConstraint {
  bool filterable = 1;

  repeated string default_filters = 2;
}

message SortingConstraint {
  bool sortable = 1;
  bool default_sort = 2;
}

message SearchingConstraint {
  bool searchable = 1;
  string field_identifier = 2;
}

message IntegerRules {
  FilteringConstraint filtering = 10;
  SortingConstraint sorting = 11;
}

message FloatRules {
  FilteringConstraint filtering = 10;
  SortingConstraint sorting = 11;
}

message BoolRules {
  FilteringConstraint filtering = 10;
}

message StringRules {
  oneof well_known {
    OpenTextRules open_text = 1;
    DateRules date = 2;
    ForeignKeyRules foreign_key = 3;
  }
}

message OpenTextRules {
  SearchingConstraint searching = 10;
}

message DateRules {
  FilteringConstraint filtering = 10;
  SortingConstraint sorting = 11;
}

message ForeignKeyRules {
  oneof type {
    KeyRules unique_string = 1;
    KeyRules uuid = 2;
    KeyRules id62 = 3;
  }
}

message UniqueStringRules {
  FilteringConstraint filtering = 10;
}

message KeyRules {
  FilteringConstraint filtering = 10;
}

message EnumRules {
  FilteringConstraint filtering = 10;
}

message TimestampRules {
  FilteringConstraint filtering = 10;
  SortingConstraint sorting = 11;
}

message DecimalRules {
  FilteringConstraint filtering = 10;
  SortingConstraint sorting = 11;
}

message AnyRules {
  FilteringConstraint filtering = 10;
}
